- various code clean-up